package com.lambstat.model;

enum systemStatus
{
	systemStatus_E1_UNKNOWN = 1;
	systemStatus_E2_RUNNING = 2;
	systemStatus_E3_RESTARTING = 3;
	systemStatus_E4_SHUTTING_DOWN = 4;
}
message UnspecifiedType
{
	required string baseObjectType = 1;
	required bytes object = 2;
}

message status
{
	optional string message = 1;
	required int32 status = 2;
}

message loginRequest
{
	optional status _status = 1;
	optional string type = 2;
	optional string password = 3;
	optional string username = 4;
}

message shutdownResponse
{
	optional status _status = 1;
	optional string type = 2;
	optional systemStatus _systemStatus = 3;
}

message abstractResponse
{
	optional status _status = 1;
	optional string type = 2;
	optional bool logged = 3;
	optional string name = 4;
	optional string password = 5;
	optional string username = 6;
	optional systemStatus _systemStatus = 7;
	optional bool immediately = 8;
	optional bool loggedOut = 9;
}

message shutdownRequest
{
	optional status _status = 1;
	optional string type = 2;
	required bool immediately = 3;
}

message logoutResponse
{
	optional status _status = 1;
	optional string type = 2;
	required bool loggedOut = 3;
}

message loginResponse
{
	optional status _status = 1;
	optional string type = 2;
	required bool logged = 3;
	optional string name = 4;
}

